[package]
name = "blockchair_downloader"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "blockchair_downloader"
path = "src/main.rs"

[dependencies]
# ureq 3.x uses "rustls" feature, not "tls"
ureq = { version = "3.2.0", default-features = false, features = ["rustls"] }
ctrlc = "3.5.2"

[profile.release]
opt-level = "z"       
lto = true            
codegen-units = 1     
strip = true          
panic = "abort"       
